--- a/AJP.css
+++ b/AJP.css
@@ -1,6 +1,4 @@
 body {
-    background: white;
-    position: fixed;
     background-repeat: no-repeat;
 	width: 65%;
 	font: 14px/22px "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -46,6 +44,9 @@ img.banner{
     display:block;
     margin-left: auto;
     margin-right: auto;
+}
+.clear{
+    clear: both;
 }
 h1{
     font-family: cursive;
